--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Barno Asrolkhujayeva</h2>
-    <p>Im a second year student of <em>Inha University in Tashkent</em> or just simply IUT, as we all spell.</br>I am keen oon web programming</p>
+    <p><span>I</span>m a second year student of <em>Inha University in Tashkent</em> or just simply IUT, as we all spell.</br>I am keen oon web programming</p>
 <h4>For the time being we have 8 subjects that are:</h4>
 <ul>
     <li>Internet Programming(SOC2111)</li>
@@ -22,27 +22,27 @@
 <h4>I prefer reading original books rather than watching the movie itself</h4>
 <a href="https://www.thoughtco.com/twilight-by-stephenie-meyer-book-review-362342" target="_blank"/>
 <img src="C:\Users\AZIZ\Desktop\ttt.jpg" alt="a photo"/>
-<p>'Twilight' by Stephenie Meyer was first published in October 2005.
+<p>'<span>T</span>wilight' by Stephenie Meyer was first published in October 2005.
 Publisher: Little, Brown
 512 Pages</p>
 </a>
 
 <a href="https://knigopoisk.com/stiven-kovi/sem-navykov-vysokoeffektivnyh-lyudey-moschnye-instrumenty-razvitiya-lichnosti/" target="_blank">
 <img src="C:\Users\AZIZ\Desktop\sem.jpg" alt="a photo"/>
-<p>By Stiven Covi</p>
+<p><span>B</span>y Stiven Covi</p>
 </a>
 
 <a href="https://mybook.ru/author/dejl-brekenridzh-karnegi/pravila-zhizni-uspeshnyh-lyudej-21-vdohnovlyayusha/" target="_blank">
     <img src="C:\Users\AZIZ\Desktop\кк.jpg" alt="a photo"/>
-    <p>By Dale Carnegie</p>
+    <p><span>B</span>y Dale Carnegie</p>
     </a>
     
     <h4>Here i am with my emotions</h4>
-    <p id="first">when i am happy</p>
+    <p id="first"><span>w</span>hen i am happy</p>
     <img src="C:\Users\AZIZ\Desktop\sweets.jpg" alt="sweets"/>
-    <p id="second">when i am sad</p>
+    <p id="second"><span>w</span>hen i am sad</p>
     <img src="C:\Users\AZIZ\Desktop\sweets.jpg" alt="sweets"/>
-    <p id="last">short info about my neighbour Bonu))))</p>
+    <p id="last"><span>s</span>hort info about my neighbour Bonu))))</p>
     <img src="C:\Users\AZIZ\Desktop\sweets.jpg" alt="sweets"/>
 </body>
 </html>
